syntax = "proto3";

package codexk8s.controlplane.v1;

option go_package = "github.com/codex-k8s/codex-k8s/proto/gen/go/codexk8s/controlplane/v1;controlplanev1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Principal {
  string user_id = 1;
  string email = 2;
  string github_login = 3;
  bool is_platform_admin = 4;
  bool is_platform_owner = 5;
}

message IngestGitHubWebhookRequest {
  string correlation_id = 1;
  string event_type = 2;
  string delivery_id = 3;
  google.protobuf.Timestamp received_at = 4;
  bytes payload_json = 5;
}

message IngestGitHubWebhookResponse {
  string correlation_id = 1;
  string run_id = 2;
  string status = 3;
  bool duplicate = 4;
}

message ResolveStaffByEmailRequest {
  string email = 1;
  string github_login = 2;
}

message ResolveStaffByEmailResponse {
  Principal principal = 1;
}

message AuthorizeOAuthUserRequest {
  string email = 1;
  int64 github_user_id = 2;
  string github_login = 3;
}

message AuthorizeOAuthUserResponse {
  Principal principal = 1;
}

message Project {
  string id = 1;
  string slug = 2;
  string name = 3;
  string role = 4;
}

message ListProjectsRequest {
  Principal principal = 1;
  int32 limit = 2;
}

message ListProjectsResponse {
  repeated Project items = 1;
}

message UpsertProjectRequest {
  Principal principal = 1;
  string slug = 2;
  string name = 3;
}

message GetProjectRequest {
  Principal principal = 1;
  string project_id = 2;
}

message DeleteProjectRequest {
  Principal principal = 1;
  string project_id = 2;
}

message Run {
  string id = 1;
  string correlation_id = 2;
  string project_id = 3;
  string project_slug = 4;
  string project_name = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp finished_at = 9;
}

message ListRunsRequest {
  Principal principal = 1;
  int32 limit = 2;
}

message ListRunsResponse {
  repeated Run items = 1;
}

message GetRunRequest {
  Principal principal = 1;
  string run_id = 2;
}

message FlowEvent {
  string correlation_id = 1;
  string event_type = 2;
  google.protobuf.Timestamp created_at = 3;
  string payload_json = 4;
}

message ListRunEventsRequest {
  Principal principal = 1;
  string run_id = 2;
  int32 limit = 3;
}

message ListRunEventsResponse {
  repeated FlowEvent items = 1;
}

message LearningFeedback {
  int64 id = 1;
  string run_id = 2;
  string repository_id = 3;
  int32 pr_number = 4;
  string file_path = 5;
  int32 line = 6;
  string kind = 7;
  string explanation = 8;
  google.protobuf.Timestamp created_at = 9;
}

message ListRunLearningFeedbackRequest {
  Principal principal = 1;
  string run_id = 2;
  int32 limit = 3;
}

message ListRunLearningFeedbackResponse {
  repeated LearningFeedback items = 1;
}

message User {
  string id = 1;
  string email = 2;
  int64 github_user_id = 3;
  string github_login = 4;
  bool is_platform_admin = 5;
  bool is_platform_owner = 6;
}

message ListUsersRequest {
  Principal principal = 1;
  int32 limit = 2;
}

message ListUsersResponse {
  repeated User items = 1;
}

message CreateUserRequest {
  Principal principal = 1;
  string email = 2;
  bool is_platform_admin = 3;
}

message DeleteUserRequest {
  Principal principal = 1;
  string user_id = 2;
}

message ProjectMember {
  string project_id = 1;
  string user_id = 2;
  string email = 3;
  string role = 4;
  google.protobuf.BoolValue learning_mode_override = 5;
}

message ListProjectMembersRequest {
  Principal principal = 1;
  string project_id = 2;
  int32 limit = 3;
}

message ListProjectMembersResponse {
  repeated ProjectMember items = 1;
}

message UpsertProjectMemberRequest {
  Principal principal = 1;
  string project_id = 2;
  string user_id = 3;
  string email = 4;
  string role = 5;
}

message DeleteProjectMemberRequest {
  Principal principal = 1;
  string project_id = 2;
  string user_id = 3;
}

message SetProjectMemberLearningModeOverrideRequest {
  Principal principal = 1;
  string project_id = 2;
  string user_id = 3;
  google.protobuf.BoolValue enabled = 4;
}

message RepositoryBinding {
  string id = 1;
  string project_id = 2;
  string provider = 3;
  int64 external_id = 4;
  string owner = 5;
  string name = 6;
  string services_yaml_path = 7;
}

message ListProjectRepositoriesRequest {
  Principal principal = 1;
  string project_id = 2;
  int32 limit = 3;
}

message ListProjectRepositoriesResponse {
  repeated RepositoryBinding items = 1;
}

message UpsertProjectRepositoryRequest {
  Principal principal = 1;
  string project_id = 2;
  string provider = 3;
  string owner = 4;
  string name = 5;
  string token = 6;
  string services_yaml_path = 7;
}

message DeleteProjectRepositoryRequest {
  Principal principal = 1;
  string project_id = 2;
  string repository_id = 3;
}

service ControlPlaneService {
  rpc IngestGitHubWebhook(IngestGitHubWebhookRequest) returns (IngestGitHubWebhookResponse);

  // Used by api-gateway staff auth when oauth2-proxy injects identity headers.
  rpc ResolveStaffByEmail(ResolveStaffByEmailRequest) returns (ResolveStaffByEmailResponse);

  // Used by api-gateway OAuth callback to enforce allowlist and persist GitHub identity.
  rpc AuthorizeOAuthUser(AuthorizeOAuthUserRequest) returns (AuthorizeOAuthUserResponse);

  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse);
  rpc UpsertProject(UpsertProjectRequest) returns (Project);
  rpc GetProject(GetProjectRequest) returns (Project);
  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty);

  rpc ListRuns(ListRunsRequest) returns (ListRunsResponse);
  rpc GetRun(GetRunRequest) returns (Run);
  rpc ListRunEvents(ListRunEventsRequest) returns (ListRunEventsResponse);
  rpc ListRunLearningFeedback(ListRunLearningFeedbackRequest) returns (ListRunLearningFeedbackResponse);

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

  rpc ListProjectMembers(ListProjectMembersRequest) returns (ListProjectMembersResponse);
  rpc UpsertProjectMember(UpsertProjectMemberRequest) returns (google.protobuf.Empty);
  rpc DeleteProjectMember(DeleteProjectMemberRequest) returns (google.protobuf.Empty);
  rpc SetProjectMemberLearningModeOverride(SetProjectMemberLearningModeOverrideRequest) returns (google.protobuf.Empty);

  rpc ListProjectRepositories(ListProjectRepositoriesRequest) returns (ListProjectRepositoriesResponse);
  rpc UpsertProjectRepository(UpsertProjectRepositoryRequest) returns (RepositoryBinding);
  rpc DeleteProjectRepository(DeleteProjectRepositoryRequest) returns (google.protobuf.Empty);
}

